[update]增加GC调优